Bug 71734 - Commit to "Dynamically allocate the storage for program local parameters." causes KSP to abort on start up.
Summary: Commit to "Dynamically allocate the storage for program local parameters." ca...
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Mesa core (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium normal
Assignee: Eric Anholt
QA Contact:
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2013-11-18 12:04 UTC by Ian Tester
Modified: 2013-11-19 01:42 UTC (History)
1 user (show)

See Also:
i915 platform:
i915 features:


Attachments
KSP/Unity3D log with stack traces (8.90 KB, text/plain)
2013-11-18 12:04 UTC, Ian Tester
Details

Description Ian Tester 2013-11-18 12:04:35 UTC
Created attachment 89400 [details]
KSP/Unity3D log with stack traces

After a build of Mesa yesterday, Kerbal Space Program 0.22 no longer started up, crashing during the initial loading screen. It simply returns to the command line reporting that it 'Aborted'.

I used git bisect to track down which recent versions of Mesa from git would cause KSP to crash. It came down to commit e5885c119de1e508099cc1111e1c9f8ff00fab88. It causes shader local parameters to be allocated dynamically. I don't know how to debug this.

I'm using a Radeon HD 6570 card and running Linux kernel 3.11.3 on AMD64.
Comment 2 Ian Tester 2013-11-19 01:42:23 UTC
Thanks, those patches fixed the problem.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.